simplifying middleware for movies routes and adding GET /apimovies/:releaseYear with unit test and api specs
