# src/controllers/index.ts
@@ -2,4 +2,4 @@ export { getGenres } from './genreController';
 export { getCities } from './cityController';
 export { getCountries } from './countryController';
 export { getMovieLanguages } from './movieLanguageController';
-export { getMovies } from './movieController';
+export { getMovies, getMoviesByYear } from './movieController';
